🃏 Update main dashboard with DeckStack branding
✨ Frontend Updates:
- Updated page title to 'DeckStack - Stack the deck in your favor'
- Changed logo from store icon to layer-group icon with DeckStack name
- Updated welcome message with DeckStack branding and tagline
- Replaced all 'CardStore Operations Layer' references with 'DeckStack'
- Consistent branding across setup wizard, health check, and management sections

🎯 Ready for production deployment with complete DeckStack identity

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CardStore Operations Layer - Setup & Management</title>
+    <title>🃏 DeckStack - Stack the deck in your favor</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -15,8 +15,8 @@
             <div class="container">
                 <div class="header-content">
                     <div class="logo">
-                        <i class="fas fa-store"></i>
-                        <h1>CardStore Operations Layer</h1>
+                        <i class="fas fa-layer-group"></i>
+                        <h1>🃏 DeckStack</h1>
                     </div>
                     <nav class="nav">
                         <button class="nav-btn active" data-view="dashboard">
@@ -50,8 +50,8 @@
                 <!-- Dashboard View -->
                 <div id="dashboard-view" class="view active">
                     <div class="welcome-section">
-                        <h2>Welcome to CardStore Operations Layer</h2>
-                        <p>Your comprehensive solution for multi-channel inventory and order management</p>
+                        <h2>🃏 Welcome to DeckStack</h2>
+                        <p>Stack the deck in your favor with automated shipping</p>
                     </div>
 
                     <div class="status-grid">
@@ -138,7 +138,7 @@
                     <div class="wizard-container">
                         <div class="wizard-header">
                             <h2>Setup Wizard</h2>
-                            <p>Let's get your CardStore Operations Layer up and running!</p>
+                            <p>Let's get your DeckStack system up and running!</p>
                             <div class="progress-bar">
                                 <div class="progress-fill" id="wizard-progress"></div>
                             </div>
@@ -173,7 +173,7 @@
                     <div class="health-container">
                         <div class="health-header">
                             <h2>System Health Check</h2>
-                            <p>Comprehensive diagnostics for your CardStore Operations Layer</p>
+                            <p>Comprehensive diagnostics for your DeckStack system</p>
                             <button class="btn primary" onclick="runHealthCheck()">
                                 <i class="fas fa-sync"></i>
                                 Run Health Check
@@ -214,7 +214,7 @@
                     <div class="management-container">
                         <div class="management-header">
                             <h2>System Management</h2>
-                            <p>Manage your CardStore Operations Layer services and configuration</p>
+                            <p>Manage your DeckStack services and configuration</p>
                         </div>
 
                         <div class="management-grid">
