🎨 Transform DeckStack into professional SaaS platform
✨ Major Professional Improvements:
- Removed all playing card emojis and imagery for clean SaaS appearance
- Replaced emojis with professional Heroicons SVG icons
- Transformed tutorial into actual account setup wizard
- Added real integration configuration steps

🔧 New Setup Wizard Flow:
1. Welcome - Professional introduction with SVG icons
2. Account Setup - Company info, admin credentials, business type
3. Store Integration - Shopify, WooCommerce, BigCommerce, Custom API
4. Shipping Carriers - USPS, UPS, FedEx configuration forms
5. Setup Complete - Professional completion with next steps

🎯 Professional Features:
- Real form inputs for account creation
- Carrier API credential configuration
- Shipping preferences and thresholds
- Professional support contact options
- Clean SVG icons throughout
- Responsive grid layouts

🚀 SaaS-Ready:
- No more card game references
- Enterprise-grade visual design
- Actual configuration vs tutorial content
- Multi-tenant account setup foundation
- Professional onboarding experience

Ready for real business customers!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🃏 DeckStack - Stack the deck in your favor</title>
+    <title>DeckStack - Stack the deck in your favor</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -16,7 +16,7 @@
                 <div class="header-content">
                     <div class="logo">
                         <i class="fas fa-layer-group"></i>
-                        <h1>🃏 DeckStack</h1>
+                        <h1>DeckStack</h1>
                     </div>
                     <nav class="nav">
                         <button class="nav-btn active" data-view="dashboard">
@@ -50,7 +50,7 @@
                 <!-- Dashboard View -->
                 <div id="dashboard-view" class="view active">
                     <div class="welcome-section">
-                        <h2>🃏 Welcome to DeckStack</h2>
+                        <h2>Welcome to DeckStack</h2>
                         <p>Stack the deck in your favor with automated shipping</p>
                     </div>
 
