--- a/frontend/index.html
+++ b/frontend/index.html
@@ -827,6 +827,7 @@
                 DeckStack
             </a>
             <div class="navbar-actions">
+                <a href="automation.html" class="navbar-btn login">Automation</a>
                 <button class="navbar-btn login" onclick="openLoginModal()">Login</button>
                 <button class="navbar-btn signup" onclick="openSignupModal()">Get Started</button>
             </div>
